client_error.txt
warning: C:\Users\Trinity\Documents\daydream\Ask_Pete\crates\ask_pete_client\Cargo.toml: unused manifest key: dependencies.tokio.getrandom
    Checking ask_pete_core v0.1.0 (C:\Users\Trinity\Documents\daydream\Ask_Pete\crates\ask_pete_core)
warning: unused import: `HashSet`
  --> crates\ask_pete_core\src\lib.rs:11:33
   |
11 | use std::collections::{HashMap, HashSet};
   |                                 ^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: `ask_pete_core` (lib) generated 1 warning (run `cargo fix --lib -p ask_pete_core` to apply 1 suggestion)
    Checking ask_pete_client v0.1.0 (C:\Users\Trinity\Documents\daydream\Ask_Pete\crates\ask_pete_client)
error[E0432]: unresolved import `pete_core::ai::gemma_agent`
 --> crates\ask_pete_client\src\ai\mod.rs:2:9
  |
2 | pub use pete_core::ai::gemma_agent;
  |         ^^^^^^^^^^^^^^^-----------
  |         |              |
  |         |              help: a similar name exists in the module: `gemma_client`
  |         no `gemma_agent` in `ai`
  |
note: found an item that was configured out
 --> C:\Users\Trinity\Documents\daydream\Ask_Pete\crates\ask_pete_core\src\ai\mod.rs:2:9
  |
1 | #[cfg(target_arch = "wasm32")]
  |       ---------------------- the item is gated behind the `wasm32` feature
2 | pub mod gemma_agent;
  |         ^^^^^^^^^^^

For more information about this error, try `rustc --explain E0432`.
error: could not compile `ask_pete_client` (lib) due to 1 previous error
